# insurance-agent

./: .env.example  .gitignore
backend/: main.py  pyproject.toml
backend/models/: policy_features.py
backend/prompts/: field_aliases.py  pass_config.py  prompts.py
backend/scripts/: _diagnose_chars.py  _diagnose_gap.py  _diagnose_pdfs.py  _diagnose_reversal.py  _diagnose_words.py  classify_pdfs.py  docling_convert.py  extract_v2.py  method_c_docling.py  method_c_extract.py  scrape_irdai_historical.py  scrape_uin.py  seed_supabase.py  test_extraction_comparison.py  test_gemini.py  test_groq.py  test_voyage.py
docs/: architecture.md  data-sources.md  decisions.md  phases.md  setup.md
supabase/migrations/: migration_001_schema.sql
